--- a/dionysus-client/yo/app/jade/templates/articles.jade
+++ b/dionysus-client/yo/app/jade/templates/articles.jade
@@ -6,7 +6,7 @@ script#article-tpl(type="text/template")
   .ui.small.image
     img(src="/public/images/placeholder.png")
   .content
-    a.ui.header(href!="/app/articles/<%= id %>") <%= title %>
+    a.ui.header(href!="/articles/<%= id %>") <%= title %>
     p.description <%= summary %>
     .extra
       .ui.label XXXX
