--- a/dionysus-client/yo/app/jade/templates/header.jade
+++ b/dionysus-client/yo/app/jade/templates/header.jade
@@ -1,8 +1,8 @@
 script#header-tpl(type="text/template")
   a.active.item(href="/")
     i.home.icon 
-    | Home
+    | 汇心网
   .right.menu
-    a.item(href="/app/login") Login
+    a.item(href="/login") 登陆
   .right.menu
-    a.item(href="/app/register") Register
+    a.item(href="/register") 注册
