--- a/dionysus-client/yo/app/jade/templates/profile.jade
+++ b/dionysus-client/yo/app/jade/templates/profile.jade
@@ -11,10 +11,10 @@ script#profile-tpl(type="text/template")
         h5.white-text
         ul
           li
-            a.grey-text.text-lighten-3(href!="/app/appointments/appointedBy/<%= id %>") Appointment
+            a.grey-text.text-lighten-3(href!="/appointments/appointedBy/<%= id %>") Appointment
           li
             a.grey-text.text-lighten-3(href="/admin/tests") Test
           li
             a.grey-text.text-lighten-3(href="#!") Course
           li
-            a.grey-text.text-lighten-3(href!="/app/articles/createdBy/<%= id %>") Article
+            a.grey-text.text-lighten-3(href!="/articles/createdBy/<%= id %>") Article
