--- a/dionysus-client/yo/app/jade/templates/site.jade
+++ b/dionysus-client/yo/app/jade/templates/site.jade
@@ -13,14 +13,14 @@ script#site-tpl(type="text/template")
 					i.circular.book.icon
 				p 心理广播／文章／音视频
 				p
-					a.ui.labled.icon.button(href="/app/articles") 进入
+					a.ui.labled.icon.button(href="/articles") 进入
 						i.arrow.right.icon
 			.column
 				.ui.icon.header 在线心理咨询
 					i.circular.chat.icon
 				p 在线一对一心理咨询预约
 				p
-					a.ui.labled.icon.button(href="/app/consultants") 建设中
+					a.ui.labled.icon.button(href="/consultants") 建设中
 						i.lock.icon
 			.column
 				.ui.icon.header 心理科课程
