--- a/dionysus-client/yo/app/jade/templates/headerlogin.jade
+++ b/dionysus-client/yo/app/jade/templates/headerlogin.jade
@@ -3,4 +3,4 @@ script#headerlogin-tpl(type="text/template")
     i.home.icon 
     | Home
   .right.menu
-    a.item(href="/app/logout") Logout
+    a.item(href="/logout") Logout
