remove additional 'app' prefix

--- a/dionysus-client/yo/app/jade/templates/articles.jade
+++ b/dionysus-client/yo/app/jade/templates/articles.jade
@@ -1,5 +1,5 @@
 script#articles-tpl(type="text/template")
-  h2.ui.header Article List
+  h2.ui.header 心理知识
   ul.ui.items.divided
 
 script#article-tpl(type="text/template")
