--- a/dionysus-client/yo/app/jade/templates/header.jade
+++ b/dionysus-client/yo/app/jade/templates/header.jade
@@ -6,3 +6,10 @@ script#header-tpl(type="text/template")
     a.item(href="/login") 登陆
   .right.menu
     a.item(href="/register") 注册
+
+script#headerlogin-tpl(type="text/template")
+  a.active.item(href="/")
+    i.home.icon 
+    | 汇心网
+  .right.menu
+    a.item(href="/logout") 退出
