--- a/dionysus-client/yo/app/jade/templates/footer.jade
+++ b/dionysus-client/yo/app/jade/templates/footer.jade
@@ -1,23 +1,9 @@
 script#footer-tpl(type="text/template")
   .ui.segment
-    .row
-      .col.l6.s12
-        h5.white-text Footer Content
-        p.grey-text.text-lighten-4 You can use rows and columns here to organize your footer content.
-      .col.l4.offset-l2.s12
-        h5.white-text Links
-        ul
-          li
-            a.grey-text.text-lighten-3(href="#!") Link 1
-          li
-            a.grey-text.text-lighten-3(href="#!") Link 2
-          li
-            a.grey-text.text-lighten-3(href="#!") Link 3
-          li
-            a.grey-text.text-lighten-3(href="#!") Link 4
-  .footer-copyright
-    .container
-      | &copy; 2015 Copyright Text
-      a.grey-text.text-lighten-4.right(href="#!") More Links
+    ul
+      li 联系方式：XXXXXX
+      li 关于我们
+      li 备案号
+    &copy; 2015 版权申明
 
 
