--- a/dionysus-client/yo/app/jade/templates/appointment.jade
+++ b/dionysus-client/yo/app/jade/templates/appointment.jade
@@ -1,5 +1,5 @@
 script#appointments-tpl(type="text/template")
-  h2.ui.header Appointment List
+  h2.ui.header 我的预约
   ul.ui.items.divided
 
 script#appointment-tpl(type="text/template")
