--- a/dionysus-client/yo/app/jade/templates/header.jade
+++ b/dionysus-client/yo/app/jade/templates/header.jade
@@ -13,3 +13,7 @@ script#headerlogin-tpl(type="text/template")
     | 汇心网
   .right.menu
     a.item(href="/logout") 退出
+  .right.menu
+    a.item(href="/") 个人档案
+  .right.menu
+    a.item(href="/profile/<%= id %>") 用户面板
