--- a/dionysus-client/yo/app/jade/templates/logout.jade
+++ b/dionysus-client/yo/app/jade/templates/logout.jade
@@ -1,7 +1,7 @@
 script#logout-tpl(type="text/template")
   .required.field
-    label Feedback
+    label 反馈
     .ui.left.icon.input
-      input(type="text", name="feedback", placeholder="Feedback")
+      input(type="text", name="feedback", placeholder="反馈")
       i.user.icon
-  .ui.logout.button Logout
+  .ui.logout.button 退出
