admin course initial check in

--- a/dionysus-client/yo/app/admin.jade
+++ b/dionysus-client/yo/app/admin.jade
@@ -32,13 +32,16 @@ html(class="no-js")
   script(src="/scripts/common/entity.js")
   script(src="/scripts/common/article.js")
   script(src="/scripts/common/category.js")
+  script(src="/scripts/common/course.js")
+  script(src="/scripts/common/consultant.js")
   script(src="/scripts/common/menu.js")
   script(src="/scripts/common/header.js")
   script(src="/scripts/admin/admin.js")
   script(src="/scripts/admin/article-management.js")
   script(src="/scripts/admin/category-management.js")
+  script(src="/scripts/admin/course-management.js")
   script(src="/scripts/admin/tests.js")
   // endbuild
-  
+
   script
     | Dionysus.start();
