--- a/dionysus-client/yo/app/jade/admin-layout.jade
+++ b/dionysus-client/yo/app/jade/admin-layout.jade
@@ -6,4 +6,5 @@ main#main
 include ./admin/home
 include ./admin/categories
 include ./admin/articles
+include ./admin/courses
 include ./admin/tests
