--- a/dionysus-client/yo/app/jade/admin/courses.jade
+++ b/dionysus-client/yo/app/jade/admin/courses.jade
@@ -18,7 +18,8 @@ script#admin-course-editor-tpl(type="text/template")
           option(value="") 选择课程类别
           option(value="1") 一对一在线辅导
           option(value="2") 在线课堂
-          option(value="3") 线下课程
+          option(value="3") 在线视频
+          option(value="4") 线下课程
 
       .six.wide.field
         label 上课时间
