--- a/dionysus-client/yo/app/jade/admin/courses.jade
+++ b/dionysus-client/yo/app/jade/admin/courses.jade
@@ -1,57 +1,67 @@
 script#admin-course-editor-tpl(type="text/template")
-  form.ui.form
-    fields
-      .six.wide.field
-        label 课程名称
-        input(name="title", type="text", placeholder="课程名称")
-      .six.wide.field
-        label 课程内容
-        select(name="category").ui.dropdown
-          option(value="") 选择课程类别
-          | <% _.each(categories, function(category) { %>
-          | <option value="<%= category.link %>"><%= category.name %></option>
-          | <% }) %>
+  .ui.segment
+    form.ui.form
 
-      .six.wide.field
-        label 课程状态
-        select(name="state").ui.dropdown
-          option(value="OPEN") 开放
-          option(value="IN_PROGRESS") 准备中
-          option(value="FINISHED") 已结束
+      fields
+        .ui.header 基本信息
+        .ui.divider
+        .field
+          label 课程名称
+          input(name="title", type="text", placeholder="课程名称")
+        .field
+          label 课程内容
+          select(name="category").ui.dropdown
+            option(value="") 选择课程类别
+            | <% _.each(categories, function(category) { %>
+            | <option value="<%= category.link %>"><%= category.name %></option>
+            | <% }) %>
 
-      .six.wide.field
-        label 上课形式
-        select(name="approach").ui.dropdown
-          option(value="") 选择课程类别
-          option(value="ONE2ONE") 一对一在线辅导
-          option(value="ONE2MANY") 在线课堂
-          option(value="VIDEO") 在线视频
-          option(value="OFFLINE") 线下课程
+        .field
+          label 课程状态
+          select(name="state").ui.dropdown
+            option(value="OPEN") 开放
+            option(value="IN_PROGRESS") 准备中
+            option(value="FINISHED") 已结束
 
-      .six.wide.field
-        label 上课时间
-        input(name="time", id= "courseTime", type="text", placeholder="时间")
-      .six.wide.field
-        label 上课地点
-        input(name="address", type="text", placeholder="地址")
-      .six.wide.field
-        label 讲师
-        select(name="consultant").ui.dropdown
-          option(value="") 选择讲师
-          | <% _.each(consultants, function(consultant) { %>
-          | <option value="<%= consultant.link %>"><%= consultant.username %></option>
-          | <% }) %>
+        .field
+          label 上课形式
+          select(name="approach").ui.dropdown
+            option(value="") 选择课程类别
+            option(value="ONE2ONE") 一对一在线辅导
+            option(value="ONE2MANY") 在线课堂
+            option(value="VIDEO") 在线视频
+            option(value="OFFLINE") 线下课程
 
-      .six.wide.field
-        label 人数限制
-        input(name="capacity", type="text", placeholder="人数")
-      #videoPart.six.wide.field
-        label 视频链接
-        input(name="video", type="text", placeholder="视频链接")
-      .six.wide.field
-        label 课程简介
-        textarea(name="description")
+        .field
+          label 授课老师
+          select(name="consultant").ui.dropdown
+            option(value="") 选择讲师
+            | <% _.each(consultants, function(consultant) { %>
+            | <option value="<%= consultant.link %>"><%= consultant.username %></option>
+            | <% }) %>
 
-      .ui.button.submit
-        i.save.icon
-        | 保存
+        .ui.header 详细信息
+        .ui.divider
+        .field
+          label 上课时间
+          input(name="time", id= "courseTime", type="text", placeholder="时间")
+        .field
+          label 上课地点
+          input(name="address", type="text", placeholder="地址")
+
+
+        .field
+          label 人数限制
+          input(name="capacity", type="text", placeholder="人数")
+        #videoPart.field
+          label 视频链接
+          input(name="video", type="text", placeholder="视频链接")
+
+
+        .field
+          label 课程简介
+          textarea(name="description")
+
+        .ui.button.submit
+          i.save.icon
+          | 保存
