--- a/dionysus-client/yo/app/jade/templates/header.jade
+++ b/dionysus-client/yo/app/jade/templates/header.jade
@@ -16,4 +16,4 @@ script#headerlogin-tpl(type="text/template")
   .right.menu
     a.item(href="/") 个人档案
   .right.menu
-    a.item(href="/profile/<%= id %>") 用户面板
+    a.item(href!="/profile/<%= id %>") 用户面板
