add groupAddress field for course UI

--- a/dionysus-client/yo/app/jade/admin/courses.jade
+++ b/dionysus-client/yo/app/jade/admin/courses.jade
@@ -48,14 +48,15 @@ script#admin-course-editor-tpl(type="text/template")
         .field
           label 上课地点
           input(name="address", type="text", placeholder="地址")
-
-
         .field
           label 人数限制
           input(name="capacity", type="text", placeholder="人数")
         #videoPart.field
           label 视频链接
-          input(name="video", type="text", placeholder="视频链接")
+          input(name="videoLink", type="text", placeholder="视频链接")
+        #groupAddress.field
+          label QQ群地址
+          input(name="groupAddress", type="text", placeholder="QQ群地址")
 
 
         .field
