add search course by user page

--- a/dionysus-client/yo/app/index.jade
+++ b/dionysus-client/yo/app/index.jade
@@ -27,6 +27,7 @@ html(class="no-js")
   script(src="/scripts/common/test.js")
   script(src="/scripts/common/appointment.js")
   script(src="/scripts/common/user.js")
+  script(src="/scripts/common/course.js")
   script(src="/scripts/consultant/consultant.js")
   script(src="/scripts/modules/home.js")
   script(src="/scripts/modules/about.js")
@@ -40,6 +41,7 @@ html(class="no-js")
   script(src="/scripts/modules/profile.js") 
   script(src="/scripts/modules/appointment.js")
   script(src="/scripts/modules/error.js")
+  script(src="/scripts/modules/course.js")
   // endbuild
   
   script
