--- a/dionysus-client/yo/app/admin.jade
+++ b/dionysus-client/yo/app/admin.jade
@@ -11,6 +11,7 @@ html(class="no-js")
     link(rel="stylesheet", href="/bower_components/froala/css/froala_editor.css")
     link(rel="stylesheet", href="/bower_components/froala/css/froala_style.css")
     link(rel="stylesheet", href="/bower_components/toastr/toastr.css")
+    link(rel="stylesheet", href="/bower_components/datetimepicker/jquery.datetimepicker.css")
     link(rel="stylesheet", href="/styles/main.css")
     // endbuild
   body.dionysus
@@ -20,6 +21,7 @@ html(class="no-js")
 
   // build:js(.) /scripts/admin/froala_editor.js
   script(src="/bower_components/froala/js/froala_editor.min.js")
+  script(src="/bower_components/datetimepicker/jquery.datetimepicker.js")
   // endbuild
 
   script(src="/public/langs/zh_cn.js")
