--- a/dionysus-client/yo/app/jade/admin/courses.jade
+++ b/dionysus-client/yo/app/jade/admin/courses.jade
@@ -44,7 +44,7 @@ script#admin-course-editor-tpl(type="text/template")
         .ui.divider
         .field
           label 上课时间
-          input(name="time", id= "courseTime", type="text", placeholder="时间")
+          input(name="date", id= "courseTime", type="text", placeholder="时间")
         .field
           label 上课地点
           input(name="address", type="text", placeholder="地址")
