course initial checkin for non-admin UI

--- a/dionysus-client/yo/app/jade/templates/courses.jade
+++ b/dionysus-client/yo/app/jade/templates/courses.jade
@@ -4,7 +4,7 @@ script#course-list-item-tpl(type="text/template")
   .content
     a.header 链接到课程详细信息
     .meta
-      span.cinema 副标题
+      span 咨询师链接
     .description
       p 课程描述
     .extra
