add loading view

--- a/dionysus-client/yo/app/index.jade
+++ b/dionysus-client/yo/app/index.jade
@@ -42,6 +42,7 @@ html(class="no-js")
   script(src="/scripts/modules/appointment.js")
   script(src="/scripts/modules/error.js")
   script(src="/scripts/modules/course.js")
+  script(src="/scripts/modules/commonUtils.js")
   // endbuild
   
   script
