--- a/dionysus-client/yo/app/jade/layout.jade
+++ b/dionysus-client/yo/app/jade/layout.jade
@@ -19,3 +19,4 @@ include ./templates/profile
 include ./templates/logout
 include ./templates/appointment
 include ./templates/courses
+include ./templates/common_tpl
