--- a/dionysus-client/yo/app/admin.jade
+++ b/dionysus-client/yo/app/admin.jade
@@ -43,6 +43,7 @@ html(class="no-js")
   script(src="/scripts/admin/category-management.js")
   script(src="/scripts/admin/course-management.js")
   script(src="/scripts/admin/tests.js")
+  script(src="/scripts/modules/commonUtils.js")
   // endbuild
 
   script
