--- a/dionysus-client/yo/app/jade/templates/common_tpl.jade
+++ b/dionysus-client/yo/app/jade/templates/common_tpl.jade
@@ -1,4 +1,9 @@
 script#loading-view(type="text/template")
 	.ui.segment
-		.ui.active.dimmer
+		.ui.active.inverted.dimmer
 			.ui.text.loader 正在加载
+		p ..
+		p ...
+		p ....
+		p .....
+		p ......
