--- a/dionysus-client/yo/app/jade/templates/common_tpl.jade
+++ b/dionysus-client/yo/app/jade/templates/common_tpl.jade
@@ -1,9 +1,3 @@
 script#loading-view(type="text/template")
-	.ui.segment
-		.ui.active.inverted.dimmer
-			.ui.text.loader 正在加载
-		p ..
-		p ...
-		p ....
-		p .....
-		p ......
+	.ui.active.centered.large.inline.loader
+	p  正在加载...
