--- a/dionysus-client/yo/app/jade/admin/articles.jade
+++ b/dionysus-client/yo/app/jade/admin/articles.jade
@@ -14,10 +14,16 @@ script#admin-articles-tpl(type="text/template")
         i.right.large.chevron.icon
     .column
       p
+  .ui.modal
+    i.close.icon
+    .header 确定删除？
+    .content
+      .description 删除文章将会同时删除和文章相关的所有附言...
+    .actions
+      .ui.button.cancel 取消
+      .ui.red.button.ok 确定
 
 script#admin-article-tpl(type="text/template")
-  .image
-    img(src="/public/images/placeholder.png")
   .content
     a.ui.header(href!="/admin/articles/<%= id %>") 
       i.edit.icon
