bug fix of modal pop up

--- a/dionysus-client/yo/app/jade/admin-layout.jade
+++ b/dionysus-client/yo/app/jade/admin-layout.jade
@@ -2,6 +2,13 @@ div#header
   header#navigation
   #submenu
 main#main
+.ui.modal
+  .header 确定删除？
+  .content
+    .description 删除文章将会同时删除和文章相关的所有附言...
+  .actions
+    .ui.button.cancel 取消
+    .ui.red.button.ok 确定
 
 include ./admin/home
 include ./admin/categories
