--- a/dionysus-client/yo/app/jade/templates/header.jade
+++ b/dionysus-client/yo/app/jade/templates/header.jade
@@ -11,6 +11,10 @@ script#headerlogin-tpl(type="text/template")
   a.active.item(href="/")
     i.home.icon 
     | 汇心网
+  div#adminentry.right.menu
+    a#adminlink.item
+      i.small.settings.icon
+      |管理员系统
   .right.menu
     a.item(href="/logout") 退出
   .right.menu
