enable file upload

--- a/dionysus-client/yo/app/admin.jade
+++ b/dionysus-client/yo/app/admin.jade
@@ -21,12 +21,15 @@ html(class="no-js")
 
   // build:js(.) /scripts/admin/froala_editor.js
   script(src="/bower_components/froala/js/froala_editor.min.js")
+  script(src="/bower_components/froala/js/plugins/video.min.js")
+  script(src="/bower_components/froala/js/plugins/file_upload.min.js")
+  script(src="/scripts/froala_audio.js")
   script(src="/bower_components/datetimepicker/jquery.datetimepicker.js")
   // endbuild
 
   script(src="/public/langs/zh_cn.js")
   script
-    | $.Editable.DEFAULTS.key = 'qnbccwA-16ebB1watfgB3zuv==';
+    | $.Editable.DEFAULTS.key = 'ZqordtponD3fveuvA6kfg==';
 
   // build:js({app,.tmp}) /scripts/admin/app.js
   script(src="/scripts/app.js")
