enable course on site page

--- a/dionysus-client/yo/app/jade/templates/site.jade
+++ b/dionysus-client/yo/app/jade/templates/site.jade
@@ -27,7 +27,7 @@ script#site-tpl(type="text/template")
 					i.circular.users.icon
 				p 线下课程／线上课程／录制课程
 				p
-					a.ui.labled.icon.button(href="#") 建设中
+					a.ui.labled.icon.button(href="/courses") 进入
 						i.lock.icon
 			.column
 				.ui.icon.header 心理测试
