--- a/dionysus-client/yo/app/index.jade
+++ b/dionysus-client/yo/app/index.jade
@@ -8,6 +8,7 @@ html(class="no-js")
 
     // build:css({.,.tmp}) /styles/main.css
     link(rel="stylesheet", href="/styles/main.css")
+    link(rel="stylesheet", href="/bower_components/datetimepicker/jquery.datetimepicker.css")
     // endbuild
 
     title Dionysus
