--- a/dionysus-client/yo/app/jade/_library.jade
+++ b/dionysus-client/yo/app/jade/_library.jade
@@ -23,7 +23,8 @@ script(src="/bower_components/backbone.intercept/dist/backbone.intercept.js")
 script(src="/bower_components/backbone-relational/backbone-relational.js")
 script(src="/bower_components/uri-templates/uri-templates.js")
 script(src="/bower_components/backbone-relational-hal/backbone-relational-hal.js")
-script(src="/bower_components/toastr/toastr.js")
+script(src="/bower_components/toastr/toastr.js")  
+script(src="/bower_components/datetimepicker/jquery.datetimepicker.js")
 // endbuild
 
 // build:js(.) /scripts/live.js
